backend/k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth-service
          image: sathushan0622/auth-service:latest
          ports:
            - containerPort: 5000 
          resources:
            limits:
              cpu: "500m"
              memory: "128Mi"
