backend/k8s/restaurant-service.yaml

# apiVersion: v1
# kind: Service
# metadata:
#   name: restaurant-service
# spec:
#   selector:
#     app: restaurant  # Must match the Pod's label (check with `kubectl describe pod payment-service-xxxx`)
#   ports:
#     - protocol: TCP
#       port: 8002       # Port exposed by the Service
#       targetPort: 8002 # Must match the Pod's containerPort

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: restaurant-service
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: restaurant
#   template:
#     metadata:
#       labels:
#         app: restaurant
#     spec:
#       containers:
#         - name: restaurant-service
#           image: sathushan0622/restaurant-service:latest
#           ports:
#             - containerPort: 8000 
#           resources:
#             limits:
#               cpu: "500m"
#               memory: "128Mi"


apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant
  template:
    metadata:
      labels:
        app: restaurant
    spec:
      containers:
        - name: restaurant-service
          image: sathushan0622/restaurant-service:latest  

             
          ports:
            - containerPort: 8002 # This should match your Service & Ingress
          resources:
            limits:
              cpu: "500m"
              memory: "128Mi"
