backend/k8s/auth-service.yml

apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: NodePort
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
      nodePort: 30001  # Choose any port between 30000-32767
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: sathushan0622/auth-service
          ports:
            - containerPort: 8002
