backend/k8s/delivery-service.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: delivery-service
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: delivery
#   template:
#     metadata:
#       labels:
#         app: delivery
#     spec:
#       containers:
#         - name: delivery-service
#           image: sathushan0622/delivery-service:latest
#           ports:
#             - containerPort: 8008 
#           resources:
#             limits:
#               cpu: "500m"
#               memory: "128Mi"


apiVersion: v1
kind: Service
metadata:
  name: delivery-service
spec:
  selector:
    app: delivery  # Must match Pod labels (check `kubectl describe pod order-service-xxx`)
  ports:
    - protocol: TCP
      port: 8008       # Port exposed by the Service
      targetPort: 8008 # Must match the Pod's `containerPort`
