backend/k8s/order-service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  type: NodePort
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: prasadchandima/order-service
          ports:
            - containerPort: 8000
