backend/k8s/payment-service.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: payment-service
# spec:
#   selector:
#     app: payment-service
#   ports:
#     - protocol: TCP
#       port: 8001
#       targetPort: 8001
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: payment-service
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: payment-service
#   template:
#     metadata:
#       labels:
#         app: payment-service
#     spec:
#       containers:
#         - name: payment-service
#           image: sathushan0622/payment-service
#           ports:
#             - containerPort: 8001
#           env:
#             - name: MONGO_URL
#               value: mongodb+srv://sathushan622:aR21BXgeiy4Gp18l@cluster0.xggor3h.mongodb.net/


apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  type: NodePort
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
      nodePort: 30001  # Choose any port between 30000-32767
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: sathushan0622/payment-service
          ports:
            - containerPort: 8001
